@@ -582,10 +582,6 @@ GST_RESOURCE_ERROR
 GST_STREAM_ERROR
 GST_ERROR_SYSTEM
 gst_error_get_message
-gst_core_error_quark
-gst_library_error_quark
-gst_resource_error_quark
-gst_stream_error_quark
 <SUBSECTION Standard>
 GST_TYPE_G_ERROR
 GST_TYPE_CORE_ERROR
@@ -598,6 +594,10 @@ gst_core_error_get_type
 gst_library_error_get_type
 gst_resource_error_get_type
 gst_stream_error_get_type
+gst_core_error_quark
+gst_library_error_quark
+gst_resource_error_quark
+gst_stream_error_quark
 </SECTION>
 
 
