@@ -1,3 +1,15 @@
+2005-10-13  Stefan Kost  <ensonic@users.sf.net>
+
+	* docs/gst/gstreamer-sections.txt:
+	* gst/gst.c:
+	* gst/gsterror.h:
+	* tools/gst-inspect.c: (main):
+	* tools/gst-launch.c: (main):
+	* tools/gst-run.c: (main):
+	* tools/gst-xmlinspect.c: (main):
+	  fix GOption context leaks
+	  doc fixes
+
 2005-10-13  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* gst/gstbus.c:
